# veloxdb

./: CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cursor/rules/: veloxdb-core-standards.mdc
.cursor/skills/rust-heavy-performance/: SKILL.md
.github/: FUNDING.yml
.github/workflow/: sponsors.yml
.github/workflows/: desktop-build.yml
.sisyphus/run-continuation/: ses_1c1cddfcfffenEHXE36U5julMT.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  credentials.rs  db.rs  error.rs  export.rs  lib.rs  models.rs  pg_error.rs  sql_split.rs  ssh_tunnel.rs
src-tauri/src/commands/: connections.rs  ddl.rs  duckdb.rs  editor_meta.rs  export_cmds.rs  lint.rs  mod.rs  mongo.rs  query.rs  redis.rs  table_props.rs  updater.rs  veloxy.rs
src-tauri/src/db/: connection_pool.rs  identifier_guard.rs  retry.rs
src-tauri/src/engines/: duckdb.rs  mod.rs  mongo.rs  mysql.rs  postgres.rs  redis.rs  sqlite.rs
src-tauri/tests/: integration_tests.rs
src/components/: VeloxApp.tsx
src/components/ui/: popover.tsx
src/data/: query-keys.ts  types.ts
src/data/repositories/: TauriVeloxDbRepository.ts  VeloxDbRepository.ts
src/features/commands/components/: CommandPalette.tsx  SettingsDialog.tsx  ShortcutSheet.tsx
src/features/connections/: queries.ts  resolve-expanded-database.test.ts  use-connection-health.ts
src/features/connections/components/: ConnectionDialog.tsx  ConnectionsSidebarTree.tsx  RenameConnectionDialog.tsx  engine-form-config.ts
src/features/model/: apply-entire-model.ts  diagram-header-palette.ts  konva-theme.ts  migration-preview.ts  model-layout-storage.ts  model-types.ts  queries.ts  table-node-metrics.ts  use-diagram-interaction.ts
src/features/model/components/: CreateTableDialog.tsx  DdlReviewDialog.tsx  DiagramCanvas.tsx  DiagramMinimap.tsx  IndexInspectorSection.tsx  MigrationPreviewDialog.tsx  ModelCatalog.tsx  ModelInspector.tsx  ModelWorkspace.tsx  ModelWorkspaceToolbar.tsx  ReactFlowCanvas.tsx  (+5 more)
src/features/onboarding/: DatabaseSphere.tsx  OnboardingFlow.tsx  constants.ts
src/features/queries/: cross-engine-format.test.ts  queries.test.ts  queries.ts  query-workspace-persistence.ts  query-workspace-state.test.ts  query-workspace-state.ts  result-edits.ts  results-export.ts
src/features/schema/: queries.ts
src/features/workspace/: ModelWorkspaceAdapter.tsx  types.ts  workspace-utils.ts
src/hooks/: useAppState.ts  useUpdateCheck.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/lib/: app-error.test.ts  app-error.ts  connection-string.test.ts  connection-string.ts  error-notifier.ts  format-bytes.ts  monaco-setup.ts  openrouter-credentials.ts  openrouter-models.ts  settings.ts  sql-ident.ts  sql-intent.test.ts  sql-intent.ts
(+24 files in other folders)
