[package]
name = "veloxdb"
version = "0.1.0-beta.2"
description = "PostgreSQL, unleashed on your desktop. Fast, memory-efficient, developer-focused PostgreSQL client."
authors = ["Abenezer"]
license = "MIT"
repository = "https://github.com/abeni16/veloxdb"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "veloxdb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
deadpool-postgres = "0.14"
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
tokio-postgres-rustls = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "0.26"
rand = "0.8"
keyring = "3"
