[package]
name = "veloxdb"
version = "0.1.0-8"
description = "SQL databases, unleashed on your desktop. Fast, memory-efficient, developer-focused desktop SQL client."
authors = ["Abenezer"]
license = "MIT"
repository = "https://github.com/abeni16/veloxdb"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "veloxdb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
deadpool-postgres = "0.14"
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
tokio-postgres-rustls = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
webpki-roots = "0.26"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql", "sqlite", "chrono"] }
urlencoding = "2.1"
hex = "0.4"
rand = "0.8"
keyring = "3"
base64 = "0.22"
resvg = "0.43"
usvg = "0.43"
csv = "1.3"
printpdf = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
thiserror = "2"
chrono = "0.4.45"
mongodb = "3"
bson = "2"
duckdb = { version = "1", features = ["bundled"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
